Move some things, make running the project in intelliJ much easier for others.