@@ -24,6 +24,18 @@ dependencies {
     implementation("org.yaml:snakeyaml:2.2")
 }
 
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-preview")
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs("--enable-preview")
+}
+
 tasks.test {
     useJUnitPlatform()
 }
